--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" type="text/css" href="style_sheet.css">
 
-    <link rel="icon" type="image/gif" href="images/B.gif"/>
+    <link rel="icon" type="image/gif" href="B.gif"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
@@ -17,7 +17,7 @@
 <!-- Create a banner across the top of the site with the BioBots logo -->
 <div id = 'banner'>
 
-    <img src='images/biobots.gif' alt='BioBots Logo' style='width:280px;height:75px'></img><br>
+    <img src='biobots.gif' alt='BioBots Logo' style='width:280px;height:75px'></img><br>
 
     <a href="main.html" style="padding-left:20px;">Home Page</a>
     
@@ -32,10 +32,15 @@
 <div style = "position:fixed; top:120px; left:20px;">
 <h2 id = 'header'> </h2>
 
-<p>Take a look at the 'Parameters' page, to access data accumulated from all BioBots users, or at the 'My Results' page, to see only the data from your print sessions! <br><br> For more information about BioBots, check out the main website here: <a href="https://www.biobots.io/">BioBots Main Site</a></p><br>
+<p>Take a look at the 'Parameters' page, to access data accumulated from all BioBots users, or at the 
+'My Results' page, to see only the data from your print sessions! <br><br> For more information about 
+BioBots, check out the main website here: <a href="https://www.biobots.io/">BioBots Main Site</a></p><br>
 
 <!-- A message for Chrome users -->
-<p id = 'note_for_chrome' style = "display:none;">ATTENTION! Are you using Chrome? Cookies can't be stored and accessed across local files using Chrome, so for the full experience try loading 'login.html' into Firefox or Safari (especially Firefox :P)! If you aren't using Chrome and are seeing this message, make sure you logged in either as 'admin' or using a BioBots user email in the 'login.html' page.</p>
+<p id = 'note_for_chrome' style = "display:none;">ATTENTION! Are you using Chrome? 
+Cookies can't be stored and accessed across local files using Chrome, so for the full experience try loading 
+'login.html' into Firefox or Safari (especially Firefox :P)! If you aren't using Chrome and are seeing this message, 
+make sure you logged in either as 'admin' or using a BioBots user email in the 'login.html' page.</p>
 
 </div>
 
